--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,64 @@
+@import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+  font-family: "Baloo";
+  src: url("/fonts/Baloo/Baloo2-VariableFont_wght.ttf");
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@font-face {
+  font-family: "SF Pro Rounded";
+  font-weight: 900;
+  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Black.otf");
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@font-face {
+  font-family: "SF Pro Rounded";
+  font-weight: 700;
+  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Bold.otf");
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+@font-face {
+  font-family: "SF Pro Rounded";
+  font-weight: 800;
+  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Heavy.otf");
+}
+
+@font-face {
+  font-family: "SF Pro Rounded";
+  font-weight: 300;
+  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Light.otf");
+}
+
+@font-face {
+  font-family: "SF Pro Rounded";
+  font-weight: 500;
+  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Medium.otf");
+}
+
+@font-face {
+  font-family: "SF Pro Rounded";
+  font-weight: 400;
+  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Regular.otf");
+}
+
+@font-face {
+  font-family: "SF Pro Rounded";
+  font-weight: 600;
+  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Semibold.otf");
+}
+
+@font-face {
+  font-family: "SF Pro Rounded";
+  font-weight: 100;
+  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Thin.otf");
+}
+
+@font-face {
+  font-family: "SF Pro Rounded";
+  font-weight: 200;
+  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Ultralight.otf");
 }
