--- a/app/globals.css
+++ b/app/globals.css
@@ -6,61 +6,61 @@
 
 @font-face {
   font-family: "Baloo";
-  src: url("/fonts/Baloo/Baloo2-VariableFont_wght.ttf");
+  src: url("/minigame/fonts/Baloo/Baloo2-VariableFont_wght.ttf");
 }
 
 @font-face {
   font-family: "SF Pro Rounded";
   font-weight: 900;
-  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Black.otf");
+  src: url("/minigame/fonts/SF Rounded/SF-Pro-Rounded-Black.otf");
 }
 
 @font-face {
   font-family: "SF Pro Rounded";
   font-weight: 700;
-  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Bold.otf");
+  src: url("/minigame/fonts/SF Rounded/SF-Pro-Rounded-Bold.otf");
 }
 
 @font-face {
   font-family: "SF Pro Rounded";
   font-weight: 800;
-  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Heavy.otf");
+  src: url("/minigame/fonts/SF Rounded/SF-Pro-Rounded-Heavy.otf");
 }
 
 @font-face {
   font-family: "SF Pro Rounded";
   font-weight: 300;
-  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Light.otf");
+  src: url("/minigame/fonts/SF Rounded/SF-Pro-Rounded-Light.otf");
 }
 
 @font-face {
   font-family: "SF Pro Rounded";
   font-weight: 500;
-  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Medium.otf");
+  src: url("/minigame/fonts/SF Rounded/SF-Pro-Rounded-Medium.otf");
 }
 
 @font-face {
   font-family: "SF Pro Rounded";
   font-weight: 400;
-  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Regular.otf");
+  src: url("/minigame/fonts/SF Rounded/SF-Pro-Rounded-Regular.otf");
 }
 
 @font-face {
   font-family: "SF Pro Rounded";
   font-weight: 600;
-  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Semibold.otf");
+  src: url("/minigame/fonts/SF Rounded/SF-Pro-Rounded-Semibold.otf");
 }
 
 @font-face {
   font-family: "SF Pro Rounded";
   font-weight: 100;
-  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Thin.otf");
+  src: url("/minigame/fonts/SF Rounded/SF-Pro-Rounded-Thin.otf");
 }
 
 @font-face {
   font-family: "SF Pro Rounded";
   font-weight: 200;
-  src: url("/fonts/SF Rounded/SF-Pro-Rounded-Ultralight.otf");
+  src: url("/minigame/fonts/SF Rounded/SF-Pro-Rounded-Ultralight.otf");
 }
 
 #wheel {
@@ -71,4 +71,16 @@
   /* width: 100%; */
   margin: auto;
   font-family: "SF Pro Rounded" !important;
+}
+
+.zoom-90 {
+  zoom: 0.9;
+}
+
+.zoom-80 {
+  zoom: 0.8;
+}
+
+.zoom-70 {
+  zoom: 0.7;
 }
